--- a/lib/pkp/locale/en_US/submission.xml
+++ b/lib/pkp/locale/en_US/submission.xml
@@ -363,7 +363,7 @@
 	<message key="submissions.declined">Declined</message>
 	<message key="submissions.incomplete">Incomplete</message>
 	<message key="submissions.noSubmissions">No Submissions</message>
-	<message key="submissions.queuedEditing">In Editing</message>
+	<message key="submissions.queuedEditing">Accepted</message>
 	<message key="submissions.queued">Queued</message>
 	<message key="submissions.queuedUnassigned">Awaiting assignment</message>
 	<message key="submissions.ruling">Ruling</message>
