--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -84,7 +84,7 @@
 	<message key="common.queue.long.submissionsUnassigned">Unassigned</message>
 	<message key="common.queue.short.submissionsUnassigned">Unassigned</message>
 	<message key="common.queue.long.submissionsInEditing">Submissions in Editing</message>
-	<message key="common.queue.short.submissionsInEditing">In Editing</message>
+	<message key="common.queue.short.submissionsInEditing">Accepted</message>
 	<message key="common.queue.long.submissionsInReview">Submissions in Review</message>
 	<message key="common.queue.short.submissionsInReview">In Review</message>
 	<message key="common.queue.long.submissionsArchives">Archives</message>
